# Bar-Chart-Race

./: .gitignore  CMakeLists.txt  author.md
src/: Animation.cpp  BarChart.cpp  BarItem.cpp  Database.cpp  Reader.cpp  UserInput.cpp  UserOutput.cpp  main.cpp
src/include/: Animation.hpp  BarChart.hpp  BarItem.hpp  Database.hpp  Reader.hpp  UserInput.hpp  UserOutput.hpp
